# transmission-rss

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
helm/: Chart.yaml  values.yaml
helm/templates/: cron.yaml  persistence.yaml
src/: config.rs  lib.rs  main.rs  rss.rs
src/notification/: mod.rs  notification.rs  telegram.rs
