[package]
name = "transmission-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5"
transmission-rpc = "0.3.6"
