[package]
name = "transmission-rss"
description = "A simple binary to add RSS torrent items to transmission"
version = "0.1.0"
edition = "2021"
keywords = ["rss", "transmission", "torrent"]
categories = ["torrent"]
license = "MIT"

[dependencies]
rss = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5"
transmission-rpc = "0.3.6"
sled = "0.34.7"
