[package]
name = "transmission-rss"
description = "A simple binary to add RSS torrent items to transmission"
version = "0.3.0"
edition = "2021"
keywords = ["rss", "transmission", "torrent"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
rss = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5"
transmission-rpc = "0.3.6"
sled = "0.34.7"
clap = { version = "3.1.13", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.9.0"

[dev-dependencies]
tokio-test = "0.4.2"
httpmock = "0.6.6"

[profile.release]
lto = true
codegen-units = 1
